--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "onsenui": "^2.10.2",
     "vue": "^2.5.3",
     "vue-onsenui": "^2.6.1",
+    "vue2-leaflet": "^1.2.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
