--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gh-pages": "^1.2.0",
     "onsenui": "^2.10.2",
+    "osm-auth": "^1.0.2",
     "v-autocomplete": "^1.8.2",
     "vue": "^2.5.3",
     "vue-onsenui": "^2.6.1",
