--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "deploy": "npm run build && npm run demo:index && gh-pages -d www"
   },
   "dependencies": {
+    "browser-image-compression": "0.0.3",
+    "dateformat": "^3.0.3",
     "gh-pages": "^1.2.0",
     "onsenui": "^2.10.2",
     "osm-auth": "^1.0.2",
     "v-autocomplete": "^1.8.2",
     "vue": "^2.5.3",
     "vue-onsenui": "^2.6.1",
+    "vue-picture-input": "^2.1.6",
     "vue2-leaflet": "^1.2.3",
     "vuejs-auto-complete": "^0.9.0",
     "vuex": "^3.0.1"
