--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "browser-image-compression": "0.0.3",
     "dateformat": "^3.0.3",
+    "exif-orientation-image": "^1.0.1",
     "gh-pages": "^1.2.0",
     "onsenui": "^2.10.2",
     "osm-auth": "^1.0.2",
