--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^1.2.0",
     "onsenui": "^2.10.2",
     "osm-auth": "^1.0.2",
+    "pusher-js": "^4.4.0",
     "v-autocomplete": "^1.8.2",
     "vue": "^2.5.3",
     "vue-onsenui": "^2.6.1",
