--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0 --port 3000",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules && cp land.html www/",
     "build:watch": "cross-env NODE_ENV=production WEBPACK_WATCH=true webpack --progress --hide-modules",
     "demo:index": "mv www/index.html www/main.html && sed -i -e 's/index\\.html/main\\.html/' www/demo.html && mv www/demo.html www/index.html",
     "deploy": "npm run build && npm run demo:index && gh-pages -d www"
