--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-picture-input": "^2.1.6",
     "vue-signature-pad": "^1.1.9-beta.1",
     "vue-socket.io": "^3.0.7",
+    "vue-toasted": "^1.1.26",
     "vue2-leaflet": "^1.2.3",
     "vuejs-auto-complete": "^0.9.0",
     "vuex": "^3.0.1"
