--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "v-autocomplete": "^1.8.2",
     "vue": "^2.6.10",
     "vue-loader": "^11.0.0",
+    "vue-multiple-progress": "^1.6.0",
     "vue-onsenui": "^2.6.1",
     "vue-picture-input": "^2.1.6",
     "vue-signature-pad": "^1.1.9-beta.1",
