--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dateformat": "^3.0.3",
     "exif-orientation-image": "^1.0.1",
     "gh-pages": "^1.2.0",
+    "logrocket": "^0.6.21",
+    "logrocket-vuex": "0.0.3",
     "onsenui": "^2.10.2",
     "osm-auth": "^1.0.2",
     "pusher-js": "^4.4.0",
