--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "browser-image-compression": "0.0.3",
+    "buefy": "^0.7.5",
     "dateformat": "^3.0.3",
     "exif-orientation-image": "^1.0.1",
     "gh-pages": "^1.2.0",
+    "lodash": "^4.17.11",
     "logrocket": "^0.6.21",
     "logrocket-vuex": "0.0.3",
     "onsenui": "^2.10.2",
@@ -25,9 +27,11 @@
     "pusher-js": "^4.4.0",
     "v-autocomplete": "^1.8.2",
     "vue": "^2.6.10",
+    "vue-instant": "^1.0.4",
     "vue-loader": "^11.0.0",
     "vue-onsenui": "^2.6.1",
     "vue-picture-input": "^2.1.6",
+    "vue-select": "^3.1.0",
     "vue-signature-pad": "^1.1.9-beta.1",
     "vue-socket.io": "^3.0.7",
     "vue-toasted": "^1.1.26",
