--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "osm-auth": "^1.0.2",
     "pusher-js": "^4.4.0",
     "v-autocomplete": "^1.8.2",
+    "v-file-upload": "^3.1.7",
     "vue": "^2.6.10",
     "vue-i18n": "^8.11.2",
     "vue-instant": "^1.0.4",
@@ -47,11 +48,15 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.28.7",
